--- a/src/_includes/layouts/homepage.html
+++ b/src/_includes/layouts/homepage.html
@@ -8,5 +8,40 @@ layout: base
 
 <div class="main-content">
     {{ content }}
-    <div class="hero">{{hero.something }}</div>
+    
+    <div class="margins">
+        <div class="house">
+            <img class="roomTower"
+            src="Images/Square_1.png"
+            alt="Assets"
+            />
+          <img class="roomTower"
+            src="Images/Square_2.png"
+            alt="Assets"
+          />
+          <img class="roomTower"
+            src="Images/Square_3.png"
+            alt="Assets"
+          />
+          <img class="roomTower"
+            src="Images/Square_4.png"
+            alt="Assets"
+          />
+          <img class="roomHouse"
+            src="Images/Rectangle_1.png"
+            alt="Assets"
+          />  
+          <img class="roomHouse"
+            src="Images/Rectangle_2.png"
+            alt="Assets"
+          />
+          <img class="roomHouse"
+            src="Images/Rectangle_3.png"
+            alt="Assets"
+          />
+          <img class="roomHouse"
+            src="Images/Rectangle_4.png"
+            alt="Assets"
+          />
+    </div>
 </div>
