--- a/src/_includes/layouts/homepage.html
+++ b/src/_includes/layouts/homepage.html
@@ -6,42 +6,59 @@ layout: base
     <h2>{{hero.title }}</h2>
 </div>
 
+<div class="narrationText"> 
+    <h3 class="narrationTower">{{narration.tower}} </h3>
+    <h3 class="narrationHouse">{{narration.house}} </h3>
+</div>
+
 <div class="main-content">
-    {{ content }}
-    
-    <div class="margins">
-        <div class="house">
-            <img class="roomTower"
-            src="Images/Square_1.png"
-            alt="Assets"
-            />
-          <img class="roomTower"
-            src="Images/Square_2.png"
-            alt="Assets"
-          />
-          <img class="roomTower"
-            src="Images/Square_3.png"
-            alt="Assets"
-          />
-          <img class="roomTower"
-            src="Images/Square_4.png"
-            alt="Assets"
-          />
-          <img class="roomHouse"
-            src="Images/Rectangle_1.png"
-            alt="Assets"
-          />  
-          <img class="roomHouse"
-            src="Images/Rectangle_2.png"
-            alt="Assets"
-          />
-          <img class="roomHouse"
-            src="Images/Rectangle_3.png"
-            alt="Assets"
-          />
-          <img class="roomHouse"
-            src="Images/Rectangle_4.png"
-            alt="Assets"
-          />
+    <div class="structure">
+        <div class="">
+            <img class="roofTower"
+                src="Images/Square_Roof.png"
+                alt="Assets"
+                />
+             </div>
+             <img class="roofHouse"
+                src="Images/Rectangle_Roof.png"
+                alt="Assets"
+                />
+             </div>
+        <div class="margins">
+            <div class="house">
+                <img class="roomTower"
+                src="Images/Square_2.png"
+                alt="Assets"
+              />
+              <img class="roomTower"
+                src="Images/Square_4.png"
+                alt="Assets"
+              />
+              <img class="roomTower"
+              src="Images/Square_3.png"
+              alt="Assets"
+              />
+                <img class="roomTower"
+                src="Images/Square_1.png"
+                alt="Assets"
+                />
+              <img class="roomHouse"
+                src="Images/Rectangle_1.png"
+                alt="Assets"
+              />  
+              <img class="roomHouse"
+                src="Images/Rectangle_2.png"
+                alt="Assets"
+              />
+              <img class="roomHouse"
+                src="Images/Rectangle_3.png"
+                alt="Assets"
+              />
+              <img class="roomHouse"
+                src="Images/Rectangle_4.png"
+                alt="Assets"
+              />
+        </div>
     </div>
+    
 </div>
